refactor: narrow the catches that hid faults
catch (Exception e) arms around JSON reads, token parsing and the batch
sweep swallowed programming errors alongside the failure they were
written for, so a null dereference inside the try surfaced as the
handled case.

Each narrows to the exception actually thrown. Fully-qualified names in
signatures become imports and hand-rolled logger fields become the
annotation.